-- fixed wordwrap of code blocks

--- a/webslides/static/css/style.css
+++ b/webslides/static/css/style.css
@@ -16,6 +16,7 @@ code {
     font-size:1.1em;
     padding:15px;
     white-space: pre-wrap;
+    overflow-wrap: break-word;
 }
 
 .container {
